--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3"
   }
 }
